# wma

./: .gitignore  pyproject.toml
wma/: .env  .gitignore  commands.md  db.sqlite3  manage.py  pyproject.toml
wma/activation/: admin.py  models.py  urls.py  views.py
wma/activation/templates/activation/: activate.html
wma/static/: manifest.json
wma/static/js/: dataTables.semanticui.js
wma/static/print/: invoiceMain.css  printinvoice.css
wma/static/sw/: app.js  serviceworker.js
wma/utils/: check_group_with_authentication.py  custom_response.py  customer_ledger_generator.py  get_owner_detail.py  get_user_id_detail.py  json_validator.py  logger.py
wma/wma/: asgi.py  settings.py  urls.py  wsgi.py
wma/wmaApp/: admin.py  apps.py  models.py  urls.py  views.py
wma/wmaApp/api/: api_view.py  c.csv  reports_view.py  urls.py
wma/wmaApp/api_cached/: api_cached_view.py  urls.py
wma/wmaApp/templates/wmaApp/: baseIndex.html  dashboard.html  login.html
wma/wmaApp/templates/wmaApp/booking/: booking_detail.html  booking_list.html  edit_booking.html
wma/wmaApp/templates/wmaApp/customer/: customer_ledger.html  manage_customer.html
wma/wmaApp/templates/wmaApp/driver_jar_allocation/: driver_jar_allocation.html  jar_allocation.html
wma/wmaApp/templates/wmaApp/expenditure/: manage_expenditure.html
wma/wmaApp/templates/wmaApp/expense_group/: manage_expense_group.html
wma/wmaApp/templates/wmaApp/inventory/: manage_category.html  manage_products.html  manage_tax_and_hsn.html  manage_units.html
wma/wmaApp/templatetags/: custom_has_group_tag.py
(+15 files in other folders)
