[project]
name = "watermanagement"
version = "0.1.0"
description = "Water Management Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-datatables-view>=1.20.0",
    "django-pwa>=2.0.1",
    "django-redis>=6.0.0",
    "django-stdimage>=6.0.2",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "weasyprint>=66.0",
]
